--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="login">로그인</string>
     <string name="logout">로그아웃</string>
     <string name="register">회원가입</string>
-    <string name="register_info">환영합니다! 아래 정보들을 기입해주세요.</string>
+    <string name="register_info">아래 정보들을 기입해주세요.</string>
     <string name="name">이름</string>
     <string name="email">이메일</string>
     <string name="pw_chk">번호 확인</string>
