화면깨짐수정 v0.2d
상품상세 상품이미지 끝부분 짤리는 것 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">홈페이지</string>
+    <string name="app_name">ForYourPlants</string>
     <string name="id">아이디</string>
     <string name="pw">비밀번호</string>
     <string name="login">로그인</string>
